[package]
name = "gitmirror"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argh = "0.1"
cmd_lib = "1.3"
env_logger = "0.10"
log = "0.4"
octocrab = { version = "0.18", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23", features = ["rt", "macros"] }

[profile.release]
opt-level = 'z'
lto = true
panic = "abort"
strip = "symbols"
